codespan-reporting/tests/snapshots/term__unicode_spans__medium_no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&config)
---
moon_jump.rs:1:1: error[E01]: cow may not jump during new moon.

note: invalid unicode range

note: invalid unicode range

note: invalid unicode range


