codespan-reporting/tests/snapshots/term__unicode_spans__rich_no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&config)
---
error[E01]: cow may not jump during new moon.

   ┌─ moon_jump.rs:1:1
   │
 1 │ 🐄🌑🐄🌒🐄🌓🐄🌔🐄🌕🐄🌖🐄🌗🐄🌘🐄
   │   ^^ Invalid jump
   │   -- Cow range does not start at boundary.
   │   ------ Cow does not start or end at boundary.
   │     -- Cow range does not end at boundary.
   │


